# probirka

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: doc.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  integration.rst  usage.rst
probirka/: __init__.py  _probirka.py
tests/: test_probes.py  test_probirka.py
